<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ClientState" Id="{09a6e231-db37-4bd5-9b2c-dcea0e2c7c6b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE ClientState :
(
	IDLE,
	SENDING,
	RECEIVING
) := IDLE;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>