<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DataExchangeState" Id="{3e597866-8cd7-4fbb-847c-f328f9b2da92}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE DataExchangeState :
(
	IDLE,
	START,
	WORKING,
	ERROR
) := START;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>