<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="SendStatus" Id="{58b23f32-f69b-433a-b7d5-4999733ffda0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE SendStatus :
(
	SENDING,
	FAIL,
	SUCCESS
) := SENDING;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>